[tool.poetry]
name = "tichaiti-live-github-actions"
version = "0.1.0"
description = ""
authors = ["nucklehead <pierevans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nose2 = {extras = ["coverage_plugin"], version = "^0.10.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
